unpackaged/main/default/objects/Suivi_HGT_Insuline__c/Suivi_HGT_Insuline__c.object-meta.xml
<CustomObject>
    <label>Suivi HGT /  Insuline</label>
    <nameField>
        <displayFormat>SHI-{00000000}</displayFormat>
        <label>Nom de Suivi HGT /  Insuline</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suivis HGT /  Insuline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>