unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/Date_heure_de_la_mesure__c.field-meta.xml
<CustomField>
    <fullName>Date_heure_de_la_mesure__c</fullName>
    <label>Date / heure de la mesure</label>
    <type>DateTime</type>
</CustomField>