unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Suivis HGT /  Insuline</relationshipLabel>
    <relationshipName>Suivis_HGT_Insuline</relationshipName>
    <type>Lookup</type>
</CustomField>