unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Suivis HGT /  Insuline</relationshipLabel>
    <relationshipName>Suivis_HGT_Insuline</relationshipName>
    <type>Lookup</type>
</CustomField>