unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/HGT_glyc_mie__c.field-meta.xml
<CustomField>
    <fullName>HGT_glyc_mie__c</fullName>
    <label>HGT (glycémie)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>