unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/Insuline__c.field-meta.xml
<CustomField>
    <fullName>Insuline__c</fullName>
    <label>Insuline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>