unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/Rattrapages__c.field-meta.xml
<CustomField>
    <fullName>Rattrapages__c</fullName>
    <label>Rattrapages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>