unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/Type_de_mesure__c.field-meta.xml
<CustomField>
    <fullName>Type_de_mesure__c</fullName>
    <label>Type de mesure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Préprandial</fullName>
                <default>true</default>
                <label>Préprandial</label>
            </value>
            <value>
                <fullName>Post prandial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>