unpackaged/main/default/objects/Suivi_HGT_Insuline__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Suivis HGT /  Insuline</relationshipLabel>
    <relationshipName>Suivis_HGT_Insuline</relationshipName>
    <type>Lookup</type>
</CustomField>